# demo-s3-archiving

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ci-template.yml  root-template.yml
.github/workflows/: c-contender-build.yml
benching/control-lambda/: Cargo.toml
benching/control-lambda/src/: main.rs  s3_object_proxy.rs
benching/fill-bucket/: Cargo.toml
benching/fill-bucket/src/: main.rs
ci-config/: buildspec.yml
contenders/c/: README.md
contenders/c/sebsto/: Makefile
contenders/c/sebsto/src/: json.c  json.h  main.c  ring.c  ring.h  runtime.c  runtime.h  util.c  util.h  zip.c  zip.h
contenders/python/j-nicholson98/: bootstrap  build.sh  index.py
contenders/python/j-nicholson98/archiver/: archive.py  bufferpool.py  handler.py  raw_s3.py  storage.py  zipwriter.py
contenders/python/sebsto/: index.py
contenders/rust/figment-engine/: Cargo.toml  README.md  force.sh  fut.bootstrap  results.sh  submit.sh
contenders/rust/figment-engine-chain/: Cargo.toml  README.md
contenders/rust/figment-engine-chain/src/: assemble_chain.rs  main.rs  plan_chain.rs  rate_limit.rs
contenders/rust/figment-engine-less-clone/: Cargo.toml  fut.bootstrap
contenders/rust/figment-engine-less-clone/src/: main.rs
contenders/rust/figment-engine-less-clone/src/aws/: assemble.rs  mod.rs  stream_fallback.rs
contenders/rust/figment-engine-less-clone/src/engine/: crc.rs  plan.rs  zip_format.rs
contenders/rust/figment-engine/src/: lib.rs  main.rs  slabs_buffer.rs  slabs_ring.rs
contenders/rust/figment-engine/src/aws/: assemble.rs  stream_fallback.rs
contenders/rust/figment-engine/src/engine/: crc.rs  mod.rs  plan.rs  zip_format.rs
contenders/rust/jeremie-rodon/: Cargo.toml
contenders/rust/jeremie-rodon/src/: main.rs  slabs_ring.rs  zipper.rs
contenders/rust/jrodon/: Cargo.toml
contenders/rust/jrodon-v2/: Cargo.toml  fut.bootstrap
contenders/rust/jrodon-v2/src/: main.rs  part_job.rs  shared_buffer.rs  zip_layout.rs
contenders/rust/jrodon-v3/src/: lambda_executor.rs
contenders/rust/jrodon/src/: main.rs  slabs_ring.rs  zipper.rs
contenders/swift/: DESIGN-LOCK-LIGHT.md  DESIGN.md  PERF-PLAN.md  README.md  RESULTS.md
contenders/swift/sebsto-classic/: Package.resolved  Package.swift
contenders/swift/sebsto-classic/Sources/CCRC32/: ccrc32.c
contenders/swift/sebsto-classic/Sources/CCRC32/include/: ccrc32.h
contenders/swift/sebsto-classic/Sources/SwiftSebstoClassic/: Archiver.swift  ChunkProducer.swift  Pipeline.swift  Stats.swift  main.swift
contenders/swift/sebsto-classic/Sources/SwiftSebstoClassic/Zip/: CRC32.swift
contenders/swift/sebsto-soto/: Package.swift
contenders/swift/sebsto-soto/Sources/CCRC32/: ccrc32.c
contenders/swift/sebsto-soto/Sources/CCRC32/include/: ccrc32.h
contenders/swift/sebsto-soto/Sources/SwiftSebstoSoto/: Archiver.swift  ChunkProducer.swift  Pipeline.swift  Stats.swift  main.swift
contenders/swift/sebsto-soto/Sources/SwiftSebstoSoto/Zip/: CRC32.swift  Headers.swift
contenders/swift/sebsto-soto/scripts/: test-codebuild-locally.sh
contenders/typescript/sebsto/: package.json  tsconfig.json
contenders/typescript/sebsto/src/: index.ts
issues/: 002-swift-build-cache.md
templates/: benching.asl.json  benching.yml  contenders.yml
